Initial dev commit. Created deploy utility (docker-compose.yml, docker-compose.prod.yml, /api/Dockerfile, /api/Dockerfile.prod, /nginx/Dockerfile). Also, created entrypoint.sh and entrypoint.prod.sh as entrypoint in the app. settings.py modified to work with .env data

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,5 @@
 # pull official base image
-FROM python:3.10.6
+FROM python:3.10.6-alpine3.16
 
 # set work directory
 WORKDIR /usr/src/app
@@ -8,10 +8,19 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+#psycopg dependencies
+RUN apk update && apk add postgresql-dev gcc python3-dev musl-dev
+
 # install dependencies
 RUN pip install --upgrade pip
 COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
+COPY ./entrypoint.sh .
+RUN sed -i 's/\r$//g' /usr/src/app/entrypoint.sh
+RUN chmod +x /usr/src/app/entrypoint.sh
+
 # copy project
 COPY . .
+
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
