--- a/.env.prod
+++ b/.env.prod
@@ -1,10 +1,10 @@
-DEBUG=1
-SECRET_KEY=foo
+DEBUG=0
+SECRET_KEY=change_me
 
-DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0 [::1]
 SQL_ENGINE=django.db.backends.postgresql
 
-SQL_DATABASE=gym_dev
+SQL_DATABASE=gym_prod
 SQL_USER=post
 SQL_PASSWORD=gres
 
