--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -2,12 +2,20 @@ version: '3.8'
 
 services:
   web:
+    build: ./frontend
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontend:/frontend
+    depends_on:
+      - api
+  api:
     build:
       context: ./api
       dockerfile: Dockerfile.prod
     command: gunicorn api.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - static_volume:/home/app/web/staticfiles
+      - static_volume:/home/app/api/staticfiles
     expose:
       - 8000
     env_file:
@@ -23,10 +31,11 @@ services:
   nginx:
     build: ./nginx
     volumes:
-      - static_volume:/home/app/web/staticfiles
+      - static_volume:/home/app/api/staticfiles
     ports:
-      - 1337:80
+      - "1337:80"
     depends_on:
+      - api
       - web
 
 
