--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
-upstream gym_api {
-    server web:8000;
+upstream gym {
+    server web:3000;
 }
 
 server {
@@ -7,7 +7,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://gym_api;
+        proxy_pass http://gym;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
