Created User functionality. models.py -- models by themselves and manager to create user, staff and superuser. serializer.py -- serializer only services.py -- functionality, domain (idkn how to explain this) views.py -- API points to use User features. authentication.py -- custom auth with JWT token usage.

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 DEBUG=1
 SECRET_KEY=foo
-
+JWT_SECRET=peepeepoopoo
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0 [::1]
 SQL_ENGINE=django.db.backends.postgresql
 
