--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 db.sqlite3
 /.env.prod
 /.env.prod.db
-
-/api/gym_store/migrations/
+/api/user/migrations/
 /api/gym_monitor/migrations/
+/api/gym_store/migrations/
