--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.7.2
 Django==4.2.3
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
-gunicorn==21.0.1
+gunicorn==21.2.0
 packaging==23.1
+Pillow==10.0.0
 psycopg2-binary==2.9.6
+PyJWT==2.8.0
 pytz==2023.3
 sqlparse==0.4.4
 typing_extensions==4.7.1
