--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,10 @@ services:
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - ./api/:/usr/src/app/
+#     - media_volume:/usr/src/app/api/mediafiles ---- saving in proj dir (not in container)
+      - media_volume:/home/app/api/mediafiles  #   saving images in cont
     ports:
-      - 8000:8000
+      - "8000:8000"
     env_file:
       - .env.dev
     depends_on:
@@ -29,3 +31,4 @@ services:
 
 volumes:
   postgres_data:
+  media_volume:
